# rubric

./: .gitignore  README.md  pyproject.toml
metrics/parrot_check/: README.md  metric.py
metrics/parrot_check/examples/: x03_q6.json
rubric/: __init__.py  __main__.py  _contract.py  _loader.py  _runner.py  cli.py
rubric/builtin_metrics/outline_coverage/: metric.py
rubric/builtin_metrics/outline_outline_adherence/: metric.py
rubric/builtin_metrics/outline_research_question_coverage/: metric.py
rubric/builtin_metrics/parrot_paraphrase_rate/: metric.py
rubric/builtin_metrics/parrot_single_question_rate/: metric.py
rubric/builtin_metrics/pkbench/: metric.py
rubric/builtin_metrics/pkbench/data/: dimensions_v5.json
rubric/builtin_metrics/pkbench_answer_expansion/: metric.py
rubric/builtin_metrics/pkbench_answer_length/: metric.py
rubric/builtin_metrics/pkbench_answer_relevance/: metric.py
rubric/builtin_metrics/pkbench_behavior_oriented/: metric.py
rubric/builtin_metrics/pkbench_conversation_control/: metric.py
rubric/builtin_metrics/pkbench_detail_coverage/: metric.py
rubric/builtin_metrics/pkbench_detail_level/: metric.py
rubric/builtin_metrics/pkbench_encouragement/: metric.py
rubric/builtin_metrics/pkbench_followup_cooperation/: metric.py
rubric/builtin_metrics/pkbench_info_consistency/: metric.py
rubric/builtin_metrics/pkbench_info_density/: metric.py
rubric/builtin_metrics/pkbench_logic_clarity/: metric.py
rubric/builtin_metrics/pkbench_neutrality/: metric.py
rubric/builtin_metrics/pkbench_one_question_per_turn/: metric.py
rubric/builtin_metrics/pkbench_open_questions/: metric.py
rubric/builtin_metrics/pkbench_pacing/: metric.py
rubric/builtin_metrics/pkbench_personal_opinion/: metric.py
rubric/builtin_metrics/pkbench_question_clarity/: metric.py
rubric/builtin_metrics/pkbench_question_comprehension/: metric.py
rubric/helpers/: __init__.py  format.py  llm.py  parsing.py
rubric/internal/: __init__.py  outline_alignment.py  parrot.py  pkbench_v5.py
tests/: test_basic.py
(+2 files in other folders)
