[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rubric"
version = "0.3.0"
description = "Pluggable interview metric framework — drop a folder under metrics/, get a metric"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Pikaia" }]
keywords = ["interview", "metric", "evaluation", "voice-agent", "bench"]

[project.optional-dependencies]
# LLM-judge built-in metrics (pkbench, outline-coverage). Pure-Python
# deterministic metrics like parrot-check don't need these.
llm = ["anthropic>=0.40", "openai>=1.40,<2.0"]

[project.urls]
Homepage = "https://github.com/Pikaia-AI/rubric"

[project.scripts]
rubric = "rubric.cli:main"

[tool.setuptools.packages.find]
include = ["rubric*"]
exclude = ["tests*", "metrics*"]

# Ship built-in metrics (metric.py + README.md + examples/) with the wheel
# so `pip install rubric` already includes parrot-check etc.
[tool.setuptools.package-data]
"rubric" = ["py.typed"]
"rubric.builtin_metrics" = [
    "*/metric.py",
    "*/README.md",
    "*/examples/*",
    "*/examples/**/*",
]
# Shared snapshot data + helpers consumed by the single-dim plugins live here.
"rubric.internal" = [
    "data/*",
    "data/**/*",
]
